tests/parser/should_compile/read054.hs

{-# OPTIONS_GHC -XParallelListComp #-}

module Foo where

foo = [ ()
      | () <- foo
      | () <- foo
      ]

