tests/parser/should_fail/readFail038.hs

module Foo where

foo = [ ()
      | () <- foo
      | () <- foo
      ]

